# doc_searcher

./: .gitignore  README.md  crawl.py  index.py  pyproject.toml  remarks.md  test.py
crawler/: domain_spider.py  items.py  url_utils.py
doc_searcher/: crawl.py  index.py  web.py
doc_searcher/crawler/: domain_spider.py  settings.py  url_utils.py
doc_searcher/indexer/: index_functions.py
doc_searcher/web_service/: query_dicts.py  query_parser.py  search_functions.py  stat.py
doc_searcher/web_service/templates/: index.html  search.html  stat.html
indexer/: index_functions.py
input/: test_domains.txt
scripts/: index_dir.sh  index_list.sh  parallel_crawl.sh  single_crawl.sh  web.sh
