[project]
name = "test_doc_searcher"
version = "0.1.1"
description = "Test project: Search application for code documentation"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jinja2>=3.1.4",
    "lxml-html-clean>=0.4.1",
    "passlib[bcrypt]>=1.7.4",
    "robyn>=0.64.1",
    "scrapy>=2.12.0",
    "sqlean-py>=3.47.0",
    "tantivy>=0.22.0",
    "trafilatura>=1.12.2",
]

[console_scripts]
run_crawl = "doc_searcher.crawl:main"
run_index = "doc_searcher.index:main"
run_web = "doc_searcher.web:main"

[tool.setuptools] 
include-package-data = true
packages = ["doc_searcher",
            "doc_searcher.crawler",
            "doc_searcher.indexer",
            "doc_searcher.web_service",
            "doc_searcher.web_service.templates"]
package-data = {"doc_searcher.web_service.templates" = ["*.html"]}